<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/ellipse_59"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ellipse_59"
                android:elevation="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/createNewVolunteerHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:gravity="end|center_vertical"
                android:text="@string/createvolunteerheadline"
                android:textAppearance="@style/createHeadlineAppearance"
                app:layout_constraintBottom_toBottomOf="@+id/ellipse_59"
                app:layout_constraintEnd_toEndOf="@+id/ellipse_59"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="@+id/ellipse_59"
                app:layout_constraintTop_toTopOf="@+id/ellipse_59" />

            <View
                android:id="@+id/vector"
                android:layout_width="0dp"
                android:layout_height="165dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ellipse_59" />


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="139dp"
                android:layout_height="139dp"
                android:layout_gravity="center"
                android:background="@drawable/circle"
                android:padding="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vector"
                app:srcCompat="@drawable/ic_menu_camera" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_2"
                android:layout_width="139dp"
                android:layout_height="139dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vector" />

            <ImageView
                android:id="@+id/uploaded_image"
                android:layout_width="139dp"
                android:layout_height="139dp"
                android:layout_gravity="center"
                android:padding="30dp"
                android:shape="oval"
                app:layout_constraintBottom_toBottomOf="@+id/vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vector" />


            <!--            <ImageView-->
            <!--                android:layout_width="73dp"-->
            <!--                android:layout_height="73dp"-->
            <!--                android:layout_alignParentLeft="true"-->
            <!--                android:layout_alignParentTop="true"-->
            <!--                android:contentDescription="@string/media_camera"-->
            <!--                android:src="@drawable/ic_baseline_camera_24"-->
            <!--                app:layout_constraintBottom_toBottomOf="@+id/ellipse_59"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/ellipse_59" />-->

            <Button
                android:id="@+id/addImageButtonImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="219dp"
                android:layout_marginTop="188dp"
                android:background="@drawable/add_circle_24"
                android:translationZ="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/volunteerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/textfield_d"

                android:drawablePadding="10dp"
                android:hint="@string/volunteername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <EditText
                android:id="@+id/placeDescrition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="21dp"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/placedescription"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/volunteerName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/volunteerName" />


            <EditText
                android:id="@+id/todoeDescrition"
                android:layout_width="320dp"
                android:layout_height="123dp"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/tododescription"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@+id/placeDescrition"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="@+id/placeDescrition"
                app:layout_constraintTop_toBottomOf="@+id/placeDescrition" />

            <Button
                android:id="@+id/btnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/choosedate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todoeDescrition" />


            <Button
                android:id="@+id/btnTime"
                android:layout_width="112dp"
                android:layout_height="38dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="88dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/textfield_d_buttons"
                android:drawableEnd="@drawable/time_line_black"
                android:drawableRight="@drawable/time_line_black"
                android:padding="10dp"
                android:text="@string/pick_time"
                app:layout_constraintEnd_toStartOf="@+id/btnDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todoeDescrition" />


            <ImageView
                android:id="@+id/timeView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:background="@drawable/ic_rectangle_72"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todoeDescrition" />



            <TextView
                android:id="@+id/dateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="202dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="20dp"
                android:background="#0000"
                android:elevation="1dp"
                android:textColor="#001925"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/timeView"
                app:layout_constraintStart_toStartOf="@+id/timeView"
                app:layout_constraintTop_toTopOf="@+id/timeView" />



            <TextView
                android:id="@+id/hourView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="153dp"
                android:background="#0000"
                android:elevation="1dp"
                android:textColor="#001925"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/timeView"
                app:layout_constraintStart_toStartOf="@+id/timeView"
                app:layout_constraintTop_toTopOf="@+id/timeView" />



            <TextView
                android:id="@+id/durationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="230dp"
                android:background="#0000"
                android:elevation="1dp"
                android:textColor="#001925"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/timeView"
                app:layout_constraintStart_toStartOf="@+id/timeView"
                app:layout_constraintTop_toTopOf="@+id/timeView" />



            <ImageView
                android:id="@+id/numOfVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="volunteerNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeView"
                app:srcCompat="@drawable/ic_volnumberfield" />



            <ImageView
                android:id="@+id/volNumView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_rectangle_72"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numOfVol" />




            <TextView
                android:id="@+id/minVolView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="50dp"
                android:background="#0000"
                android:elevation="1dp"
                android:textColor="#001925"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/volNumView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/volNumView"
                app:layout_constraintTop_toTopOf="@+id/volNumView" />


            <TextView
                android:id="@+id/maxVolView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="50dp"
                android:background="#0000"
                android:elevation="1dp"
                android:textColor="#001925"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/volNumView"
                app:layout_constraintHorizontal_bias="0.166"
                app:layout_constraintStart_toStartOf="@+id/volNumView"
                app:layout_constraintTop_toTopOf="@+id/volNumView" />



            <Button
                android:id="@+id/sendToConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/volNumView"
                android:background="@drawable/ic_sendtoconfirm" />


            <ToggleButton
                android:id="@+id/online_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="ToggleButton"
                android:textOff="online"
                android:textOn="online"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/volNumView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>